WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156872
PolymorphicAccess adds sizeof(CallerFrameAndPC) rather than subtracting it when calculating stack height
https://bugs.webkit.org/show_bug.cgi?id=156872
Summary
PolymorphicAccess adds sizeof(CallerFrameAndPC) rather than subtracting it wh...
Filip Pizlo
Reported
2016-04-21 14:57:24 PDT
Patch forthcoming.
Attachments
the patch
(1.96 KB, patch)
2016-04-21 15:00 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-04-21 15:00:40 PDT
Created
attachment 276966
[details]
the patch
WebKit Commit Bot
Comment 2
2016-04-21 15:02:38 PDT
Attachment 276966
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccess.cpp:995: Declaration has space between type name and * in numberOfRegsForCall * sizeof [whitespace/declaration] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2016-04-21 15:06:06 PDT
Comment on
attachment 276966
[details]
the patch r=me
Filip Pizlo
Comment 4
2016-04-21 15:11:44 PDT
Landed in
http://trac.webkit.org/changeset/199837
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug