PolymorphicAccess adds sizeof(CallerFrameAndPC) rather than subtracting it when calculating stack height https://bugs.webkit.org/show_bug.cgi?id=156872

Reviewed by Geoffrey Garen.

The code that added sizeof(CallerFrameAndPC) emerged from a bad copy-paste in r189586. That was
the revision that created the PolymorphicAccess class. It moved code for generating a
getter/setter call from Repatch.cpp to PolymorphicAccess.cpp. You can see the code doing a
subtraction here:

    http://trac.webkit.org/changeset/189586/trunk/Source/JavaScriptCore/jit/Repatch.cpp

This makes the world right again.

* bytecode/PolymorphicAccess.cpp:
(JSC::AccessCase::generateImpl):



Canonical link: https://commits.webkit.org/174972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199837 268f45cc-cd09-0410-ab3c-d52691b4dbfc